Api docs - refactor som names of functions & som conclogen close #13
