# app/Http/Controllers/Api/Auth/ForgotPasswordController.php
@@ -23,19 +23,47 @@ class ForgotPasswordController extends Controller
         return $this->auth = $auth;
     }
 
+    /**
+     * send reset password email.
+     *
+     * @return \Illuminate\Http\JsonResponse
+     
+     * @OA\post(
+     *   path="/auth/forgot-password",
+     *   tags={"system"},
+     *   summary="Forget password",
+     *  
+     *   @OA\Response(
+     *     response=200,
+     *     description="", @OA\JsonContent()
+     *   ),
+     * 
+     * 
+     * @OA\RequestBody(
+     *    @OA\MediaType(
+     *        mediaType="application/json",
+     *        @OA\Schema(
+     *             example= {"email":"name@email.com"}
+     *                 )
+     *             )
+     *         ),
+     * 
+     * )
+     */
+
     public function forgotPassword(Request $request)
     {
         return $this->auth->forgotPassword($request);
     }
 
-    
+
     public function resetView(Request $request)
     {
         return $this->auth->resetView($request);
     }
 
-    public function reset(Request $request)
+    public function resetPassword(Request $request)
     {
-        return $this->auth->reset($request);
+        return $this->auth->resetPassword($request);
     }
 }
